--- a/project1.ipynb
+++ b/project1.ipynb
@@ -5069,8 +5069,8 @@
     "- The data was not rotated the way we wanted for dataframes to run analysis on. The desired columns were listed in rows.\n",
     "-- We solved this by creating sub-dataframes and combining them to make sure it was rotated correctly.\n",
     "\n",
-    "Intepreting Plots:\n",
-    "- In the sections \"Plot Average Mortality Rate by Female Average Mortality Rate (Per 1,000 Female Adults)\" and \"Plot Average Mortality Rate by Male Average Mortality Rate (Per 1,000 Male Adults)\" we were unable to determine what the data was telling us beyond that as more males or females died, overall deats in a nation went up, which is to be expected. \n",
+    "Interpreting Plots:\n",
+    "- In the sections \"Plot Average Mortality Rate by Female Average Mortality Rate (Per 1,000 Female Adults)\" and \"Plot Average Mortality Rate by Male Average Mortality Rate (Per 1,000 Male Adults)\" we were unable to determine what the data was telling us beyond that as more males or females died, overall deaths in a nation went up, which is to be expected. \n",
     "\n",
     "### Conclusion:\n",
     "\n",
